--- a/css/estilos.css
+++ b/css/estilos.css
@@ -10,3 +10,60 @@ h1,
 h2 {
   text-align: center;
 }
+
+header {
+  background-image: url("../img/header.jpg");
+  height: 300px;
+  display: flex;
+  justify-content: flex-end;
+}
+
+/* el valor flex end es para que se quede a la derecha
+el valor center es para que que en el centro */
+
+header h1 {
+  background-color: rgba(255, 255, 255, 0.623);
+  padding: 10px;
+  width: 300px;
+  height: 50px;
+}
+
+nav {
+  background-color: transparent;
+  height: 50px;
+  position: fixed;
+  top: 0;
+  left: 50px;
+}
+
+nav ol li {
+  background-color: rgb(44, 43, 43);
+  display: inline;
+  color: white;
+  padding: 15px;
+  margin: 0px 10px;
+}
+
+article {
+  padding-top: 75px;
+  background: linear-gradient(red, yellow);
+  width: 80%;
+  margin-left: 10%;
+}
+
+nav ol li a {
+  text-decoration: none;
+  color: #fff;
+}
+
+nav ol li:hover {
+  background-color: blueviolet;
+  color: black;
+  box-shadow: 5px 3px 5px black;
+  width: 250 px;
+}
+
+nav ol li a:hover {
+  color: black;
+}
+/* en box shadow especificas el eje x, el eje y  */
