clase 6, vimos position, absolute, relative, fixed, elementos semanticos header, nav, section, main, article, transparencia, alineacion top left

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -66,4 +66,4 @@ nav ol li:hover {
 nav ol li a:hover {
   color: black;
 }
-/* en box shadow especificas el eje x, el eje y  */
+/* en box shadow especificas el eje x, el eje y el otro   */
