--- a/animaciones-iconos/css/estilos.css
+++ b/animaciones-iconos/css/estilos.css
@@ -27,9 +27,9 @@ i {
   /* animation-name: mover;
   animation-duration: 5s; */
   animation: mover 5s infinite reverse;
-  /*el código así es más limpio, sobrecargas. 
-  Puede ser infinite, o podemos indicar un número de veces que puede repetir animación
-  reverse es la dirección del elemento*/
+  /*el código así es más limpio, sobrecargas el atributo animation. 
+  Puede ser Infinite, o podemos indicar un número de veces que puede repetir animación
+  Reverse es la dirección del elemento*/
 }
 
 @keyframes fadeIn {
@@ -38,6 +38,18 @@ i {
   }
   to {
     opacity: 1;
+  }
+}
+
+@keyframes otra {
+  0% {
+    color: brown;
+  }
+  25% {
+    color: yellow;
+  }
+  50% {
+    color: yellowgreen;
   }
 }
 
@@ -53,19 +65,7 @@ i {
     animation-name: fadeIn, otra, fadeIn;
     animation-duration: 3s, 7s;
     animation-delay: 3s, 8s;
-  } */
-
-@keyframes otra {
-  0% {
-    color: brown;
-  }
-  25% {
-    color: yellow;
-  }
-  50% {
-    color: yellowgreen;
-  }
-}
+} */
 
 ul li {
   display: inline;
@@ -75,12 +75,6 @@ ul li {
   color: white;
   font-weight: bold;
   cursor: pointer;
-}
-
-ul li:hover {
-  animation-name: menu;
-  animation-duration: 1s;
-  animation-iteration-count: infinite;
 }
 
 @keyframes menu {
@@ -99,4 +93,10 @@ ul li:hover {
     border-radius: 40px;
     font-size: 20px;
   }
+}
+
+ul li:hover {
+  animation-name: menu;
+  animation-duration: 2s;
+  animation-iteration-count: infinite;
 }
