--- a/tp-frontend-con-js/estilos/styles.css
+++ b/tp-frontend-con-js/estilos/styles.css
@@ -1,20 +1,84 @@
+/* NAVBAR */
 .bg-negro {
   background-color: rgba(0, 0, 0, 0.781);
 }
-
-.bg-honolulu {
-  background-color: rgba(0, 0, 0, 0.815);
-  color: white;
-}
-.nav-link {
-  color: rgb(173, 173, 173);
-}
-
 .navbar-brand,
 .text-decoration-none {
   color: white;
 }
 
+.navbar-brand:hover {
+  color: white;
+}
+
+/* NAV-LINK */
+.nav-link {
+  color: rgb(173, 173, 173);
+}
+
+.nav-link:hover {
+  color: #fff;
+}
+
+#tickets {
+  color: rgb(19, 200, 19);
+}
+
+#tickets:hover {
+  color: rgb(23, 255, 23);
+}
+
+/* CURSOR */
+.cursor {
+  cursor: pointer;
+}
+
+/* BUTTONS */
+#btn-resumen,
+#btn-borrar {
+  font-size: medium;
+}
+
+#btn-orador,
+#btn-resumen,
+#btn-borrar {
+  background-color: rgb(133, 219, 76);
+  color: white;
+}
+
+.btn-hawaii {
+  background-color: rgb(38, 165, 38);
+  color: white;
+}
+
+.btn-hawaii:hover {
+  background-color: rgb(39, 223, 39);
+  color: white;
+}
+
+#btn-orador:hover {
+  background-color: rgb(133, 245, 53);
+}
+
+#btn-resumen:hover,
+#btn-borrar:hover {
+  background-color: rgb(103, 251, 4);
+}
+
+/* LOGO */
+#logo {
+  max-height: 5rem;
+  padding-left: 1.5rem;
+}
+
+/* CARRUSEL */
+
+#carusel-title,
+#carusel-text {
+  color: white;
+}
+
+/* CARDS */
 .card-img-overlay {
   margin-right: 14%;
   margin-top: 19rem;
@@ -29,60 +93,48 @@
   font-weight: bolder;
 }
 
-.btn-hawaii {
-  background-color: rgb(38, 165, 38);
+#text-honolulu {
+  font-size: 75%;
+}
+.bg-honolulu {
+  background-color: rgba(0, 0, 0, 0.815);
   color: white;
 }
 
+/* FORM */
+#exampleFormControlTextarea1 {
+  font-size: 1.5rem;
+}
+
+#form-enviar {
+  width: 70%;
+}
+
+/* FOOTER */
 .footer {
   background-color: rgb(18, 62, 98);
   font-size: 0.9rem;
 }
 
-#logo {
-  max-height: 5rem;
-  padding-left: 1.5rem;
+.footer-anchors a {
+  text-decoration: none;
+  color: white;
 }
 
-#tickets {
-  color: rgb(19, 200, 19);
+.footer-anchors a:hover {
+  text-decoration: underline;
 }
 
-#edificio,
-#cafe,
-#obelisco {
+/* IMAGE SIZE */
+#img-edificio,
+#img-cafe,
+#img-obelisco {
   object-fit: none;
   width: 100%;
   height: 57rem;
 }
-
-#carusel-title,
-#carusel-text {
-  color: white;
-}
-
-#honolulu {
+#img-honolulu {
   max-height: 58rem;
   object-fit: none;
   width: 100%;
-}
-
-#text-honolulu {
-  font-size: 75%;
-}
-
-#exampleFormControlTextarea1 {
-  font-size: 1.5rem;
-}
-
-#btn-resumen,
-#btn-borrar {
-  font-size: medium;
-}
-
-#btn-orador,
-#btn-resumen,
-#btn-borrar {
-  background-color: rgb(133, 219, 76);
-  color: white;
 }
